updated kitty, nvim, tmux and zsh

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,35 +1,66 @@
-# Reload tmux config with Prefix + r
-unbind r
-bind r source-file ~/.tmux.conf
+# -------------------------------
+# Tmux Configuration - Brain Box
+# -------------------------------
 
-# Set tmux prefix to Ctrl + '
+# --- Prefix & Reload ---
 set -g prefix C-b
-set -g status-position bottom
+unbind C-b
+unbind r
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
-# Enable mouse support
+# --- Mouse & Base Index ---
 set -g mouse on
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-
-# Prevent double mappings for vim-tmux-navigator
-set -g @tmux_navigator_no_mappings on
-
-
-# # Bind Alt + Right to forward-word
-# bind-key -n M-Right send-keys "Esc f"
-#
-# # Bind Alt + Left to backward-word
-# bind-key -n M-Left send-keys "Esc b"
-
-
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# --- Plugins ---
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'  # optional, for copying to system clipboard
+
+# --- Prevent conflicts with vim-tmux-navigator ---
+set -g @tmux_navigator_no_mappings on
+
+# --- Pane Navigation (Option + h/j/k/l) ---
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# --- Optional: Pane resizing (Option + Shift + h/j/k/l) ---
+bind -n M-H resize-pane -L 5
+bind -n M-J resize-pane -D 5
+bind -n M-K resize-pane -U 5
+bind -n M-L resize-pane -R 5
+
+# --- Window Navigation (Option + Command + h/l via Kitty mapping) ---
+# In tmux, map prefix + h/l as fallback:
+bind h previous-window
+bind l next-window
+# Note: To use Option+Command without prefix, configure Kitty to send:
+# Ctrl+b + h/l when pressing Option+Command + h/l
+
+# --- Status line / Catppuccin ---
+set -g status-position bottom
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(🔎),}"
+set -g @catppuccin_status_modules_right "directory"
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{b:pane_current_path}"
+
+# --- Initialize TPM (must be last) ---
 run '~/.tmux/plugins/tpm/tpm'
 
-# Load Catppuccin tmux theme (must be after TPM initialization)
-run '~/.tmux/plugins/catppuccin/catppuccin.tmux'
