--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,12 +1,12 @@
-# -------------------------------
-# Tmux Configuration - Brain Box
-# -------------------------------
+# -------------------------------------
+# 🌸 Tmux Configuration - Brain Box
+# -------------------------------------
 
 # --- Prefix & Reload ---
 set -g prefix C-b
 unbind C-b
 unbind r
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
+bind r source-file ~/.tmux.conf \; display-message "✅ Config reloaded!"
 
 # --- Mouse & Base Index ---
 set -g mouse on
@@ -18,32 +18,43 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-yank'  # optional, for copying to system clipboard
+set -g @plugin 'tmux-plugins/tmux-yank'  # copy to clipboard support
 
-# --- Prevent conflicts with vim-tmux-navigator ---
-set -g @tmux_navigator_no_mappings on
+# Smart navigation between Vim and Tmux panes
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(n?vim|nvimdiff)$'"
 
-# --- Pane Navigation (Option + h/j/k/l) ---
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# --- Optional: Pane resizing (Option + Shift + h/j/k/l) ---
-bind -n M-H resize-pane -L 5
-bind -n M-J resize-pane -D 5
-bind -n M-K resize-pane -U 5
-bind -n M-L resize-pane -R 5
+# --- Optional: Resize panes (Ctrl + Arrow Keys) ---
+bind -n C-Left resize-pane -L 5
+bind -n C-Down resize-pane -D 5
+bind -n C-Up resize-pane -U 5
+bind -n C-Right resize-pane -R 5
 
-# --- Window Navigation (Option + Command + h/l via Kitty mapping) ---
-# In tmux, map prefix + h/l as fallback:
+# --- Window Navigation (Prefix + h/l) ---
 bind h previous-window
 bind l next-window
-# Note: To use Option+Command without prefix, configure Kitty to send:
-# Ctrl+b + h/l when pressing Option+Command + h/l
 
-# --- Status line / Catppuccin ---
+# --- Better Splits ---
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# --- Pane border styling ---
+set -g pane-border-style "fg=#6e738d"
+set -g pane-active-border-style "fg=#b4befe"
+
+# --- Status line (Catppuccin theme) ---
 set -g status-position bottom
+set -g status-interval 5
+set -g @catppuccin_flavour "mocha"
+
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
@@ -60,6 +71,13 @@ set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_directory_text "#{b:pane_current_path}"
+
+# --- Clipboard Integration (via tmux-yank) ---
+set-option -g set-clipboard on
+
+# --- TPM auto-install (if missing) ---
+if "test ! -d ~/.tmux/plugins/tpm" \
+  "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
 
 # --- Initialize TPM (must be last) ---
 run '~/.tmux/plugins/tpm/tpm'
