--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,88 +3,89 @@
 # -------------------------------------
 
 # --- Prefix & Reload ---
-set -g prefix C-b                  # Set prefix to Ctrl+b (default)
-unbind C-b                         # Unbind the default prefix to reassign it cleanly
-unbind r                           # Remove existing binding for reload
+unbind C-b
+set -g prefix C-b                          # Set prefix to Ctrl+b (default)
+unbind r
 bind r source-file ~/.tmux.conf \; display-message "✅ Config reloaded!"
-                                   # Reload tmux config with Prefix + r and show message
+                                           # Reload config with Prefix + r
 
 # --- Mouse & Base Index ---
-set -g mouse on                    # Enable mouse for resizing panes, selecting windows, etc.
-set -g base-index 1                # Start window numbering at 1 instead of 0
-setw -g pane-base-index 1          # Start pane numbering at 1 within each window
+set -g mouse on                            # Enable mouse for pane selection, resize, etc.
+set -g base-index 1                        # Start window numbering at 1
+setw -g pane-base-index 1                  # Start pane numbering at 1
 
-# --- Plugins ---
-set -g @plugin 'tmux-plugins/tpm'                  # Plugin manager (TPM)
-set -g @plugin 'tmux-plugins/tmux-sensible'        # Sensible default settings
-set -g @plugin 'christoomey/vim-tmux-navigator'    # Seamless navigation between Vim & Tmux
-set -g @plugin 'catppuccin/tmux'                   # Catppuccin theme for statusline and panes
-set -g @plugin 'tmux-plugins/tmux-yank'            # Clipboard integration (yank to system clipboard)
+# --- Plugins (TPM and friends) ---
+set -g @plugin 'tmux-plugins/tpm'                  # Plugin manager
+set -g @plugin 'tmux-plugins/tmux-sensible'        # Sensible defaults
+set -g @plugin 'christoomey/vim-tmux-navigator'    # Seamless Vim navigation
+set -g @plugin 'catppuccin/tmux'                   # Beautiful Catppuccin theme
+set -g @plugin 'tmux-plugins/tmux-yank'            # System clipboard integration
 
-# --- Smart navigation between Vim and Tmux panes ---
+# --- Smart Navigation (Vim ↔️ Tmux) ---
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(n?vim|nvimdiff)$'"
-                                   # Detect if the current pane is running Vim/Neovim
 
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-                                   # Allow Ctrl + h/j/k/l (and Ctrl+\) to move between Vim and Tmux panes seamlessly
 
-# --- Optional: Resize panes (Ctrl + Arrow Keys) ---
-bind -n C-Left  resize-pane -L 5   # Resize pane 5 cells to the left
-bind -n C-Down  resize-pane -D 5   # Resize pane 5 cells down
-bind -n C-Up    resize-pane -U 5   # Resize pane 5 cells up
-bind -n C-Right resize-pane -R 5   # Resize pane 5 cells to the right
+# --- Resize Panes (Ctrl + Arrow Keys) ---
+bind -n C-Left  resize-pane -L 5
+bind -n C-Down  resize-pane -D 5
+bind -n C-Up    resize-pane -U 5
+bind -n C-Right resize-pane -R 5
 
-# --- Window Navigation (Prefix + h/l) ---
-bind h previous-window             # Prefix + h → switch to previous window
-bind l next-window                 # Prefix + l → switch to next window
+# --- Window Navigation ---
+bind h previous-window                     # Prefix + h → previous window
+bind l next-window                         # Prefix + l → next window
 
-# --- Better Splits ---
-bind | split-window -h             # Prefix + | → split horizontally
-bind - split-window -v             # Prefix + - → split vertically
-unbind '"'                         # Remove default vertical split binding
-unbind %                           # Remove default horizontal split binding
+# --- Pane Management ---
+bind | split-window -h                     # Prefix + | → split right
+bind "-" split-window -v                   # Prefix + - → split down
+unbind '"'                                 # Remove default horizontal split binding
+unbind %                                   # Remove default vertical split binding
 
-# --- Pane border styling ---
-set -g pane-border-style "fg=#6e738d"           # Color for inactive pane borders
-set -g pane-active-border-style "fg=#b4befe"    # Color for active pane border
+# --- Close / Create Panes & Windows ---
+bind x kill-pane                           # Prefix + x → close current pane
+bind c new-window                          # Prefix + c → new window
+bind & kill-window                         # Prefix + & → close current window
 
-# --- Status line (Catppuccin theme) ---
-set -g status-position bottom      # Place the status line at the bottom
-set -g status-interval 5           # Refresh the status line every 5 seconds
-set -g @catppuccin_flavour "mocha" # Use the Catppuccin Mocha color theme
+# --- Pane Border Styling ---
+set -g pane-border-style "fg=#6e738d"           # Inactive border color
+set -g pane-active-border-style "fg=#b4befe"    # Active border color
 
-# Catppuccin appearance customization
-set -g @catppuccin_window_left_separator ""              # Left separator for windows
-set -g @catppuccin_window_right_separator " "            # Right separator for windows
-set -g @catppuccin_window_middle_separator " █"           # Middle separator glyph
-set -g @catppuccin_window_number_position "right"         # Show window numbers on the right
-set -g @catppuccin_window_default_fill "number"           # Default window fill style
-set -g @catppuccin_window_default_text "#W"               # Display window name
-set -g @catppuccin_window_current_fill "number"           # Highlight current window
+# --- Status Line & Theme ---
+set -g status-position bottom              # Status line at bottom
+set -g status-interval 5                   # Refresh every 5 seconds
+set -g @catppuccin_flavour "mocha"         # Theme flavor
+
+# --- Catppuccin Style Settings ---
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(🔎),}"
-                                                         # Add zoom icon when pane is zoomed
-set -g @catppuccin_status_modules_right "directory"       # Show current directory on right side
-set -g @catppuccin_status_modules_left "session"          # Show session name on left side
-set -g @catppuccin_status_left_separator  " "            # Left separator for statusline
-set -g @catppuccin_status_right_separator " "            # Right separator for statusline
-set -g @catppuccin_status_right_separator_inverse "no"    # Don’t invert separator colors
-set -g @catppuccin_status_fill "icon"                     # Fill style with icons
-set -g @catppuccin_status_connect_separator "no"          # No connection between modules
-set -g @catppuccin_directory_text "#{b:pane_current_path}"# Show current directory path in statusline
+set -g @catppuccin_status_modules_right "directory"
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{b:pane_current_path}"
 
-# --- Clipboard Integration (via tmux-yank) ---
-set -g set-clipboard on   # Enable system clipboard access when supported
+# --- Clipboard Integration (tmux-yank) ---
+set-option -g set-clipboard on             # Use system clipboard when supported
 
-# --- TPM auto-install (if missing) ---
+# --- TPM Auto-Install (if missing) ---
 if "test ! -d ~/.tmux/plugins/tpm" \
   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
-                                   # Automatically install TPM if not already present
 
-# --- Initialize TPM (must be last) ---
-run '~/.tmux/plugins/tpm/tpm'      # Initialize TPM plugin manager
+# --- Initialize TPM (MUST BE LAST) ---
+run '~/.tmux/plugins/tpm/tpm'
 
